# nix-bazel

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  Dockerfile.debian  MODULE.bazel  README.md  WORKSPACE  bazel-docker.sh  nix_bwrap.bzl  nix_deps.lock.json  nix_package.bzl  nix_providers.bzl  nix_root.bzl  nix_unpack.bzl  package_workspace.sh  packages.json  patchelf.bzl  pod.yaml  stress_test.sh  temp_config.json  test_hello.sh  test_src.txt  verify_pod.sh
nix-bazel-gen/: go.mod  go.sum
nix-bazel-gen/cmd/example-copy/: main.go
nix-bazel-gen/cmd/example-repeated/: main.go
nix-bazel-gen/cmd/nix-bazel-fetch/: main.go
nix-bazel-gen/cmd/nix-bazel-generate/: main.go
nix-bazel-gen/cmd/nix-bazel-resolve/: main.go
nix-bazel-gen/pkg/nixbazel/: build_gen.go  fetcher.go  resolve.go  types.go  util.go  util_test.go
