module(
    name = "nix_bazel_demo",
    version = "0.0.1",
)
# Force update

bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")

nix = use_extension("//:nix_package.bzl", "nix_extension")
nix.packages(lockfile = "//:nix_deps.lock.json")
nix.package(name = "git", package = "nixpkgs.git.x86_64-linux", entrypoint = "bin/git")
nix.package(name = "python3", package = "nixpkgs.python3.x86_64-linux", entrypoint = "bin/python3")
nix.package(name = "wget", package = "nixpkgs.wget.x86_64-linux", entrypoint = "bin/wget")
nix.package(name = "imagemagick", package = "nixpkgs.imagemagick.x86_64-linux", entrypoint = "bin/magick")
nix.package(name = "hello", package = "nixpkgs.hello.x86_64-linux")
use_repo(nix, "nix_deps")
